--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,6 @@ dermatologist-ai/model.pt filter=lfs diff=lfs merge=lfs -text
 project-dog-classification/model_scratch.pt filter=lfs diff=lfs merge=lfs -text
 project-dog-classification/model_transfer.pt filter=lfs diff=lfs merge=lfs -text
 project-tv-script-generation/trained_rnn.pt filter=lfs diff=lfs merge=lfs -text
+project-face-generation/100_epoch_train_samples.pkl filter=lfs diff=lfs merge=lfs -text
+project-face-generation/1_epoch_train_samples.pkl filter=lfs diff=lfs merge=lfs -text
+gan-mnist/train_samples.pkl filter=lfs diff=lfs merge=lfs -text
