--- a/.gitattributes
+++ b/.gitattributes
@@ -17,4 +17,5 @@ project-dog-classification/model_transfer.pt filter=lfs diff=lfs merge=lfs -text
 project-tv-script-generation/trained_rnn.pt filter=lfs diff=lfs merge=lfs -text
 project-face-generation/100_epoch_train_samples.pkl filter=lfs diff=lfs merge=lfs -text
 project-face-generation/1_epoch_train_samples.pkl filter=lfs diff=lfs merge=lfs -text
+project-face-generation/train_samples.pkl filter=lfs diff=lfs merge=lfs -text
 gan-mnist/train_samples.pkl filter=lfs diff=lfs merge=lfs -text
